--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+#show-gifs{
+  border: 0;
+  margin: 0;
+  padding: 0;
+}
 .show {
   display: inline-block;
   font-family: 'Play', sans-serif;
@@ -12,7 +17,6 @@
   border-style: inset;
   height: 200px;
   width: 200px;
-  border-radius: 5px;
 }
 body{
   background-image: url(https://media.giphy.com/media/l2SqgVssTNxfeAtwI/giphy.gif);
@@ -23,7 +27,9 @@ body{
 .container {
   font-family: 'Play', sans-serif;
   color: white;
+  width: 100%;
 }
+
 h1, h2 {
   font-family: 'Play', sans-serif;
   color: white;
